--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
-{
-  "name": "jdcredvip-mcp",
-  "version": "1.0.0",
-  "description": "MCP Server oficial da JD CRED VIP — integração inteligente entre Codex, Render e Google Planilhas.",
-  "type": "module",
-  "main": "server.js",
-  "scripts": { "start": "node server.js" },
-  "dependencies": {
-        "express": "^4.19.0",
-    "googleapis": "^131.0.0",
-    "dotenv": "^16.4.5"
-  }
+"dependencies": {
+  "express": "^4.18.2",
+  "cors": "^2.8.5",
+  "body-parser": "^1.20.2"
+},
+"scripts": {
+  "start": "node server.js"
 }
