--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
-"dependencies": {
-  "express": "^4.18.2",
-  "cors": "^2.8.5",
-  "body-parser": "^1.20.2"
-},
-"scripts": {
-  "start": "node server.js"
+{
+  "name": "jdcredvip-mcp",
+  "version": "1.0.0",
+  "description": "Motor de triagem inteligente JD CRED VIP",
+  "main": "server.js",
+  "type": "module",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  }
 }
