--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "dotenv": "^17.2.3",
+    "express": "^4.18.2"
   }
 }
