--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "API local para triagem de clientes JD CRED VIP",
   "type": "module",
-  "main": "server.js",
+  "main": "src/index.js",
   "scripts": {
-    "api": "node server.js",
+    "api": "node src/server.js",
     "dashboard:pull": "node scripts/fetch-dashboard.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
