--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ node_modules/
 venv/
 JD_TALK_v2.zip
 JD_TALK/jdtalk-main.zip
-client_secrets*.json
-client_secret_*
+client_secrets.json
+client_secret_
 senha.txt
 temp_fgts.txt
 crm_dashboard.json
@@ -13,7 +13,7 @@ crm_metrics.json
 JD_CRED_VIP_CRM_Atualizacao_Tecnica.pdf
 JD_CRED_VIP_Instalacao_Preparacao.pdf
 config/service-account.json
-config/coherent-voice-*.json
+config/coherent-voice-.json
 automacoes/secrets/
 *.xlsx
 scripts/__pycache__/
