Add workspace scripts and deployment docs

--- a/jdcredvip-mcp/.env.example
+++ b/jdcredvip-mcp/.env.example
@@ -1,10 +1,13 @@
+# App
 PORT=8080
-
-# Configurações de autenticação para consumo do motor em outros serviços
 TRIAGEM_URL=http://localhost:8080
 API_KEY=jdcredvip-local
 
-# Configuração do banco (MySQL -> mysql2 | PostgreSQL -> pg)
+# External integrations (optional)
+POSTMAN_API_KEY=
+APIHOSTGER_TOKEN=
+
+# Database (MySQL -> mysql2 | PostgreSQL -> pg)
 DB_CLIENT=pg
 DB_HOST=127.0.0.1
 DB_PORT=5432
@@ -12,3 +15,9 @@ DB_NAME=jdcredvip
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_SSL=false
+
+# Blogger API (opcional)
+BLOGGER_CLIENT_ID=
+BLOGGER_CLIENT_SECRET=
+BLOGGER_REFRESH_TOKEN=
+BLOGGER_BLOG_ID=
