Add Crefaz and Nexxo integration endpoints

--- a/jdcredvip-mcp/.env.example
+++ b/jdcredvip-mcp/.env.example
@@ -21,3 +21,12 @@ BLOGGER_CLIENT_ID=
 BLOGGER_CLIENT_SECRET=
 BLOGGER_REFRESH_TOKEN=
 BLOGGER_BLOG_ID=
+
+# Integrações Crefaz
+CREFAZ_API_BASE_URL=
+CREFAZ_API_KEY=
+CREFAZ_WEBHOOK_SECRET=
+
+# Integrações Nexxo
+NEXXO_API_BASE_URL=
+NEXXO_API_TOKEN=
